--- a/auth_doc.tex
+++ b/auth_doc.tex
@@ -4,7 +4,7 @@
 \begin{document}
 
 \title{党政机关公文处理工作条例}
-% \docnum{【2020】01号}
+\refnumber{【2020】01号}
 \author{槛外人}
 \date{\today}
 
@@ -25,6 +25,8 @@
 
 \paragraph{第四条}
 公文处理工作是指公文拟制、办理、管理等一系列相互关联、衔接有序的工作。
+
+\makesignature
 
 \paragraph{第五条}
 公文处理工作应当坚持实事求是、准确规范、精简高效、安全保密的原则。
@@ -222,5 +224,7 @@
 \paragraph{第四十一}本条例由中共中央办公厅、国务院办公厅负责解释。
 
 \paragraph{第四十二}本条例自2012年7月1日起施行。1996年5月3日中共中央办公厅发布的《中国共产党机关公文处理条例》和2000年8月24日国务院发布的《国家行政机关公文处理办法》停止执行。
+
+
 
 \end{document}
