--- a/auth_doc.tex
+++ b/auth_doc.tex
@@ -1,6 +1,8 @@
 % !TEX program = xelatex
 \documentclass{gbt9704}
 \usepackage{zhlipsum}
+\usepackage{lineno}
+\linenumbers
 \begin{document}
 
 \title{党政机关公文处理工作条例}
@@ -9,13 +11,69 @@
 \date{\today}
 
 \maketitle
+\makesignature
 
-\section*{第一章　总则}
+\chapter{第一章总则}
 
-\subsection{第一条}
-为了适应中国共产党机关和国家行政机关（以下简称党政机关）工作需要，推进党政机关公文处理工作科学化、制度化、规范化，制定本条例。
+新领决其名一有里按老进，没局省回识工然式式，斯照园位连联
+杜。等并众度表儿他战为值装切系，压走完清派快写提较何量，
+处号露论豆前详门选。石手教金做石酸如，还金白常什变新，长
+杨关邮。越都积满眼生管五六，战经压时厂分七火解，示结过蠢
+示直。军可市老选革办变，三原使说学叫标传天，接支传适如
+验。论府南油般日识被选，群带受行断土是色再，严传北周小伯
+必。山团压据头业年何例关，断清展马必建引为各。地是民斯斯
+实适车习调，文整史么知争回该理，千车存劳详管酸。价求通面
+必位员，光石电主别，后承将出磨。办四计问细委器几较，后与
+民器影回何车革，战力清被现。美风类支队式受思养土，复标特
+这最四根没，学图重时属。线她满非选强要相社，保及六水后派
+传团你，信露五直的件。社因受十权开百权即，列合参律对证受
+精心革，七现孟于扯两性易单用目流指学美，习员年传出根，叫
+建装共。土象石亲支内小，增信酸消至里，群孟质标茎。经资质
+小斯济民根无，西立全受由始音，什日学术等次。
+铁进称规例本百型支，色战红元话质应，保反易投今联。适
+光自气布见么务西，准感办省林罐。难展料验见东真力样，身出
+阶容合片造重，极速约董色行。员走关特都高果委空，办合品八
+新领决其名一有里按老进，没局省回识工然式式，斯照园位连联
+杜。等并众度表儿他战为值装切系，压走完清派快写提较何量，
+处号露论豆前详门选。石手教金做石酸如，还金白常什变新，长
+杨关邮。越都积满眼生管五六，战经压时厂分七火解，示结过蠢
+示直。军可市老选革办变，三原使说学叫标传天，接支传适如
+验。论府南油般日识被选，群带受行断土是色再，严传北周小伯
+必。山团压据头业年何例关，断清展马必建引为各。地是民斯斯
+实适车习调，文整史么知争回该理，千车存劳详管酸。价求通面
+必位员，光石电主别，后承将出磨。办四计问细委器几较，后与
+民器影回何车革，战力清被现。美风类支队式受思养土，复标特
+这最四根没，学图重时属。线她满非选强要相社，保及六水后派
+传团你，信露五直的件。社因受十权开百权即，列合参律对证受
+精心革，七现孟于扯两性易单用目流指学美，习员年传出根，叫
+建装共。土象石亲支内小，增信酸消至里，群孟质标茎。经资质
+小斯济民根无，西立全受由始音，什日学术等次。
+铁进称规例本百型支，色战红元话质应，保反易投今联。适
+光自气布见么务西，准感办省林罐。难展料验见东真力样，身出
+阶容合片造重，极速约董色行。员走关特都高果委空，办合品八新领决其名一有里按老进，没局省回识工然式式，斯照园位连联
 
-\section{第一章　总则}
+\section{节标题是括号}
+杜。等并众度表儿他战为值装切系，压走完清派快写提较何量，
+处号露论豆前详门选。石手教金做石酸如，还金白常什变新，长
+杨关邮。越都积满眼生管五六，战经压时厂分七火解，示结过蠢
+示直。军可市老选革办变，三原使说学叫标传天，接支传适如
+验。论府南油般日识被选，群带受行断土是色再，严传北周小伯
+必。山团压据头业年何例关，断清展马必建引为各。地是民斯斯
+
+\subsection{标题是仿宋阿拉伯数字}
+实适车习调，文整史么知争回该理，千车存劳详管酸。价求通面
+必位员，光石电主别，后承将出磨。办四计问细委器几较，后与
+民器影回何车革，战力清被现。美风类支队式受思养土，复标特
+这最四根没，学图重时属。线她满非选强要相社，保及六水后派
+传团你，信露五直的件。社因受十权开百权即，列合参律对证受
+
+\subsubsection{最小的节}
+精心革，七现孟于扯两性易单用目流指学美，习员年传出根，叫
+建装共。土象石亲支内小，增信酸消至里，群孟质标茎。经资质
+小斯济民根无，西立全受由始音，什日学术等次。
+铁进称规例本百型支，色战红元话质应，保反易投今联。适
+光自气布见么务西，准感办省林罐。难展料验见东真力样，身出
+阶容合片造重，极速约董色行。员走关特都高果委空，办合品八
 
 \paragraph{第二条}
 本条例适用于各级党政机关公文处理工作。
@@ -26,7 +84,6 @@
 \paragraph{第四条}
 公文处理工作是指公文拟制、办理、管理等一系列相互关联、衔接有序的工作。
 
-\makesignature
 
 \paragraph{第五条}
 公文处理工作应当坚持实事求是、准确规范、精简高效、安全保密的原则。
