chapter no break

--- a/auth_doc.tex
+++ b/auth_doc.tex
@@ -1,8 +1,8 @@
 % !TEX program = xelatex
 \documentclass{gbt9704}
 \usepackage{zhlipsum}
-\usepackage{lineno}
-\linenumbers
+% \usepackage{lineno}
+% \linenumbers
 \begin{document}
 
 \title{党政机关公文处理工作条例}
@@ -15,65 +15,16 @@
 
 \chapter{第一章总则}
 
-新领决其名一有里按老进，没局省回识工然式式，斯照园位连联
-杜。等并众度表儿他战为值装切系，压走完清派快写提较何量，
-处号露论豆前详门选。石手教金做石酸如，还金白常什变新，长
-杨关邮。越都积满眼生管五六，战经压时厂分七火解，示结过蠢
-示直。军可市老选革办变，三原使说学叫标传天，接支传适如
-验。论府南油般日识被选，群带受行断土是色再，严传北周小伯
-必。山团压据头业年何例关，断清展马必建引为各。地是民斯斯
-实适车习调，文整史么知争回该理，千车存劳详管酸。价求通面
-必位员，光石电主别，后承将出磨。办四计问细委器几较，后与
-民器影回何车革，战力清被现。美风类支队式受思养土，复标特
-这最四根没，学图重时属。线她满非选强要相社，保及六水后派
-传团你，信露五直的件。社因受十权开百权即，列合参律对证受
-精心革，七现孟于扯两性易单用目流指学美，习员年传出根，叫
-建装共。土象石亲支内小，增信酸消至里，群孟质标茎。经资质
-小斯济民根无，西立全受由始音，什日学术等次。
-铁进称规例本百型支，色战红元话质应，保反易投今联。适
-光自气布见么务西，准感办省林罐。难展料验见东真力样，身出
-阶容合片造重，极速约董色行。员走关特都高果委空，办合品八
-新领决其名一有里按老进，没局省回识工然式式，斯照园位连联
-杜。等并众度表儿他战为值装切系，压走完清派快写提较何量，
-处号露论豆前详门选。石手教金做石酸如，还金白常什变新，长
-杨关邮。越都积满眼生管五六，战经压时厂分七火解，示结过蠢
-示直。军可市老选革办变，三原使说学叫标传天，接支传适如
-验。论府南油般日识被选，群带受行断土是色再，严传北周小伯
-必。山团压据头业年何例关，断清展马必建引为各。地是民斯斯
-实适车习调，文整史么知争回该理，千车存劳详管酸。价求通面
-必位员，光石电主别，后承将出磨。办四计问细委器几较，后与
-民器影回何车革，战力清被现。美风类支队式受思养土，复标特
-这最四根没，学图重时属。线她满非选强要相社，保及六水后派
-传团你，信露五直的件。社因受十权开百权即，列合参律对证受
-精心革，七现孟于扯两性易单用目流指学美，习员年传出根，叫
-建装共。土象石亲支内小，增信酸消至里，群孟质标茎。经资质
-小斯济民根无，西立全受由始音，什日学术等次。
-铁进称规例本百型支，色战红元话质应，保反易投今联。适
-光自气布见么务西，准感办省林罐。难展料验见东真力样，身出
-阶容合片造重，极速约董色行。员走关特都高果委空，办合品八新领决其名一有里按老进，没局省回识工然式式，斯照园位连联
+新领决其名一有里按老进，没局省回识工然式式，斯照园位连联杜。等并众度表儿他战为值装切系，压走完清派快写提较何量，处号露论豆前详门选。石手教金做石酸如，还金白常什变新，长杨关邮。越都积满眼生管五六，战经压时厂分七火解，示结过蠢示直。军可市老选革办变，三原使说学叫标传天，接支传适如验。论府南油般日识被选，群带受行断土是色再，严传北周小伯必。山团压据头业年何例关，断清展马必建引为各。地是民斯斯实适车习调，文整史么知争回该理，千车存劳详管酸。价求通面必位员，光石电主别，后承将出磨。办四计问细委器几较，后与民器影回何车革，战力清被现。美风类支队式受思养土，复标特这最四根没，学图重时属。线她满非选强要相社，保及六水后派传团你，信露五直的件。社因受十权开百权即，列合参律对证受精心革，七现孟于扯两性易单用目流指学美，习员年传出根，叫建装共。土象石亲支内小，增信酸消至里，群孟质标茎。经资质小斯济民根无，西立全受由始音，什日学术等次。铁进称规例本百型支，色战红元话质应，保反
 
 \section{节标题是括号}
-杜。等并众度表儿他战为值装切系，压走完清派快写提较何量，
-处号露论豆前详门选。石手教金做石酸如，还金白常什变新，长
-杨关邮。越都积满眼生管五六，战经压时厂分七火解，示结过蠢
-示直。军可市老选革办变，三原使说学叫标传天，接支传适如
-验。论府南油般日识被选，群带受行断土是色再，严传北周小伯
-必。山团压据头业年何例关，断清展马必建引为各。地是民斯斯
+杜。等并众度表儿他战为值装切系，压走完清派快写提较何量，处号露论豆前详门选。石手教金做石酸如，还金白常什变新，长杨关邮。越都积满眼生管五六，战经压时厂分七火解，示结过蠢示直。军可市老选革办变，三原使说学叫标传天，接支传适如验。论府南油般日识被选，群带受行断土是色再，严传北周小伯必。山团压据头业年何例关，断清展马必建引为各。地是民斯斯
 
 \subsection{标题是仿宋阿拉伯数字}
-实适车习调，文整史么知争回该理，千车存劳详管酸。价求通面
-必位员，光石电主别，后承将出磨。办四计问细委器几较，后与
-民器影回何车革，战力清被现。美风类支队式受思养土，复标特
-这最四根没，学图重时属。线她满非选强要相社，保及六水后派
-传团你，信露五直的件。社因受十权开百权即，列合参律对证受
+实适车习调，文整史么知争回该理，千车存劳详管酸。价求通面必位员，光石电主别，后承将出磨。办四计问细委器几较，后与民器影回何车革，战力清被现。美风类支队式受思养土，复标特这最四根没，学图重时属。线她满非选强要相社，保及六水后派传团你，信露五直的件。社因受十权开百权即，列合参律对证受
 
 \subsubsection{最小的节}
-精心革，七现孟于扯两性易单用目流指学美，习员年传出根，叫
-建装共。土象石亲支内小，增信酸消至里，群孟质标茎。经资质
-小斯济民根无，西立全受由始音，什日学术等次。
-铁进称规例本百型支，色战红元话质应，保反易投今联。适
-光自气布见么务西，准感办省林罐。难展料验见东真力样，身出
-阶容合片造重，极速约董色行。员走关特都高果委空，办合品八
+精心革，七现孟于扯两性易单用目流指学美，习员年传出根，叫建装共。土象石亲支内小，增信酸消至里，群孟质标茎。经资质小斯济民根无，西立全受由始音，什日学术等次。铁进称规例本百型支，色战红元话质应，保反易投今联。适光自气布见么务西，准感办省林罐。难展料验见东真力样，身出阶容合片造重，极速约董色行。员走关特都高果委空，办合品八
 
 \paragraph{第二条}
 本条例适用于各级党政机关公文处理工作。
