--- a/auth_doc.tex
+++ b/auth_doc.tex
@@ -1,4 +1,4 @@
-% !TEX program = xelatex
+% !TEX program = XeLaTeX
 \documentclass{gbt9704}
 \usepackage{zhlipsum}
 % \usepackage{lineno}
@@ -15,7 +15,18 @@
 
 \chapter{第一章总则}
 
-新领决其名一有里按老进，没局省回识工然式式，斯照园位连联杜。等并众度表儿他战为值装切系，压走完清派快写提较何量，处号露论豆前详门选。石手教金做石酸如，还金白常什变新，长杨关邮。越都积满眼生管五六，战经压时厂分七火解，示结过蠢示直。军可市老选革办变，三原使说学叫标传天，接支传适如验。论府南油般日识被选，群带受行断土是色再，严传北周小伯必。山团压据头业年何例关，断清展马必建引为各。地是民斯斯实适车习调，文整史么知争回该理，千车存劳详管酸。价求通面必位员，光石电主别，后承将出磨。办四计问细委器几较，后与民器影回何车革，战力清被现。美风类支队式受思养土，复标特这最四根没，学图重时属。线她满非选强要相社，保及六水后派传团你，信露五直的件。社因受十权开百权即，列合参律对证受精心革，七现孟于扯两性易单用目流指学美，习员年传出根，叫建装共。土象石亲支内小，增信酸消至里，群孟质标茎。经资质小斯济民根无，西立全受由始音，什日学术等次。铁进称规例本百型支，色战红元话质应，保反
+新领决其名一有里按老进，没局省回识工然式式，斯照园位连联杜。
+
+等并众度表儿他战为值装切系，压走完清派快写提较何量，处号露论豆前详门选。石手教金做石酸如，还金白常什变新，长杨关邮。
+越都积满眼生管五六，战经压时厂分七火解，示结过蠢示直。
+
+军可市老选革办变，三原使说学叫标传天，接支传适如验。
+
+论府南油般日识被选，群带受行断土是色再，严传北周小伯必。
+
+山团压据头业年何例关，断清展马必建引为各。
+
+地是民斯斯实适车习调，文整史么知争回该理，千车存劳详管酸。价求通面必位员，光石电主别，后承将出磨。办四计问细委器几较，后与民器影回何车革，战力清被现。美风类支队式受思养土，复标特这最四根没，学图重时属。线她满非选强要相社，保及六水后派传团你，信露五直的件。社因受十权开百权即，列合参律对证受精心革，七现孟于扯两性易单用目流指学美，习员年传出根，叫建装共。土象石亲支内小，增信酸消至里，群孟质标茎。经资质小斯济民根无，西立全受由始音，什日学术等次。铁进称规例本百型支，色战红元话质应，保反
 
 \section{节标题是括号}
 杜。等并众度表儿他战为值装切系，压走完清派快写提较何量，处号露论豆前详门选。石手教金做石酸如，还金白常什变新，长杨关邮。越都积满眼生管五六，战经压时厂分七火解，示结过蠢示直。军可市老选革办变，三原使说学叫标传天，接支传适如验。论府南油般日识被选，群带受行断土是色再，严传北周小伯必。山团压据头业年何例关，断清展马必建引为各。地是民斯斯
@@ -45,9 +56,7 @@
 \paragraph{第七条}
 各级党政机关办公厅（室）主管本机关的公文处理工作，并对下级机关的公文处理工作进行业务指导和督促检查。
 
-
 第二章　公文种类
-
 
 \paragraph{第八条}
 公文种类主要有：
